added reset password in account contoller and created mail sender

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "MailServer": "smtp.gmail.com",
+    "MailPort": 587,
+    "UseSsl": true,
+    "SenderName": "Your Application",
+    "FromEmail": "your_email@gmail.com",
+    "Password": "your_app_password"
+  }
 }
